--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@ I WECOME YOU TO MY CV WEBPAGE...
 <pre>               <a href="form.html"target="_main">form</a></pre>
 <br>
 <br>
+<p> Here are some links through which ou can know about me in brief.</p>
+<pre>       <a href="freehost.github.io/about myself.html">about myself</a>                      <a href="freehost.github.io/achievements.html">achievements</a>
+            <a href="freehost.github.io/education background.html">educational background</a>                   <a href="freehost.github.io/hobbies.html">hobbies</a>   
+                                                   <a href="freehost.github.io/technical skills.html">technical skills</a>                            </pre>
 <pre><u>Contact Number</u>-7417446090                 <u>Email ID</u>-aanyav364@gmail.com  </pre>
 </body>
 </html>
