--- a/form.html
+++ b/form.html
@@ -45,7 +45,7 @@
 <input type="text"placeholder="Country Name">
 
 <pre>
-    <input type="submit"VALUE="SUBMIT">                           <a href="about myself.html"target="_main">about myself</a>
+    <input type="submit"VALUE="SUBMIT">                       
     
 
 
