--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ I WECOME YOU TO MY CV WEBPAGE...
 <br>
 <br>
 <p> Here are some links through which ou can know about me in brief.</p>
-<pre>       <a href="freehost.github.io/about myself.html">about myself</a>                      <a href="freehost.github.io/achievements.html">achievements</a>
-            <a href="freehost.github.io/education background.html">educational background</a>                   <a href="freehost.github.io/hobbies.html">hobbies</a>   
-                                                   <a href="freehost.github.io/technical skills.html">technical skills</a>                            </pre>
+<pre>       <a href="about myself.html">about myself</a>                      <a href="achievements.html">achievements</a>
+            <a href="education background.html">educational background</a>                   <a href="hobbies.html">hobbies</a>   
+                                                   <a href="technical skills.html">technical skills</a>                            </pre>
 <pre><u>Contact Number</u>-7417446090                 <u>Email ID</u>-aanyav364@gmail.com  </pre>
 </body>
 </html>
